--- a/PL_Atividade1_Fabio_Miguel.ipynb
+++ b/PL_Atividade1_Fabio_Miguel.ipynb
@@ -87,7 +87,8 @@
       "source": [
         "# **Introdução** \n",
         "\n",
-        "A pandemia de covid-19 vitimou milhares de pessoas ao redor do mundo. Atualmente, a melhor forma de prevenção contra casos graves da doença é a vacina. No Brasil estima-se que apenas 55% da população completou o esquema vacinal contra a SARSCOV2 utilizando-se as vacinas das farmaceuticas PFIZER, AZTRAZENECA e CORONAVAC. No entanto, novas mutações da doença (variantes) vem surgindo mundo afora, sendo necessária a atualização destes imunizantes, oferecendo maior proteção contra o vírus. A matéria publicada pela BBC descreve como estas vacinas podem chegar ao Brasil.\n",
+        "A pandemia de covid-19 vitimou milhares de pessoas ao redor do mundo. Atualmente, a melhor forma de prevenção contra casos graves da doença é a vacina. No Brasil estima-se que apenas 55% da população completou o esquema vacinal contra a SARSCOV2 utilizando-se as vacinas PFIZER, AZTRAZENECA e\n",
+        "CORONAVAC. No entanto, novas variantes vem surgindo mundo afora, sendo necessária a atualização destes imunizantes, oferecendo maior proteção contra o vírus. A matéria publicada pela BBC descreve como estas vacinas podem chegar ao Brasil.\n",
         "\n",
         "Referência: Vacina para covid: quando imunizantes para novas variantes chegam ao Brasil? Disponível em https://www.bbc.com/portuguese/brasil-62913349. Acesso em 23/09/2022."
       ]
@@ -243,7 +244,7 @@
       "source": [
         "#**Conclusão**\n",
         "---\n",
-        "A representação grafica do dicionário de termos acima confirma a lei de zipf, onde a palavra mais frequente ocorrerá aproximadamente duas vezes mais frequentemente do que a segunda palavra mais frequente, três vezes mais vezes que a terceira palavra mais frequente, e assim sucessivamente. "
+        "A representação grafica do dicionário de termos acima confirma a lei de zipf, onde a palavra mais frequente ocorrerá aproximadamente duas vezes mais do que a segunda palavra, três vezes mais vezes que a terceira palavra, e assim sucessivamente.\n"
       ],
       "metadata": {
         "id": "SrXpnkbiCCuO"
